--- a/po/fi.po
+++ b/po/fi.po
@@ -125,6 +125,10 @@ msgstr "Lisää sanasto"
 msgid "Additional information"
 msgstr "Lisätiedot"
 
+#: translations/misc.html:283
+msgid "ADMIN"
+msgstr "Ylläpitäjä"
+
 #: translations/misc.html:153
 msgid "Admin groups"
 msgstr "Pääkäyttäjänä ryhmissä"
@@ -425,6 +429,10 @@ msgstr "valitse luokka"
 msgid "Choose concept"
 msgstr "valitse käsite"
 
+#: translations/misc.html:282
+msgid "Choose organization"
+msgstr "Valitse organisaatio"
+
 #: translations/misc.html:223
 msgid "Choose reference data"
 msgstr "valitse koodisto"
@@ -531,10 +539,14 @@ msgstr "poista valinta"
 msgid "close"
 msgstr "sulje"
 
-#: app/components/common/historyModal.html:36
+#: app/components/common/historyModal.html:50
 #: app/components/model/modelView.html:37 translations/misc.html:174
 msgid "Close"
 msgstr "Sulje"
+
+#: translations/misc.html:286
+msgid "CODE_LIST_EDITOR"
+msgstr "Kqodistotyöntekijä"
 
 #: translations/misc.html:137
 msgid "Concept"
@@ -739,6 +751,10 @@ msgstr "Luo attribuutti ja käytä"
 msgid "Create new"
 msgstr "Luo uusi"
 
+#: app/components/editor/searchConceptModal.html:72
+msgid "Create new ' + ctrl.type + ' without referencing concept"
+msgstr ""
+
 #: translations/misc.html:185
 msgid "Create new association"
 msgstr "Lisää uusi assosiaatio"
@@ -820,6 +836,10 @@ msgstr "Sisältö venäjäksi"
 msgid "data sv"
 msgstr "Sisältö ruotsiksi"
 
+#: translations/misc.html:284
+msgid "DATA_MODEL_EDITOR"
+msgstr "Tietomallintaja"
+
 #: translations/misc.html:147
 msgid "date format"
 msgstr "DD.MM.YYYY HH:mm"
@@ -859,7 +879,7 @@ msgstr "Määrittele käsite uudelle luokalle"
 
 #: translations/misc.html:7
 msgid "Define concept for the new shape"
-msgstr ""
+msgstr "Määrittele käsite uudelle tarkennetulel luokalle"
 
 #: translations/misc.html:6
 msgid "Define concept for the shape"
@@ -1274,7 +1294,7 @@ msgstr "Piilota"
 msgid "Hide model details"
 msgstr "Piilota tietomallin tiedot"
 
-#: app/components/common/historyModal.html:3 translations/misc.html:173
+#: app/components/common/historyModal.html:6 translations/misc.html:173
 msgid "Historical versions"
 msgstr "Historialliset versiot"
 
@@ -1735,6 +1755,10 @@ msgstr ""
 #: app/components/editor/propertyView.html:62
 msgid "Optional metadata"
 msgstr "Valinnaiset metatiedot"
+
+#: app/components/user/userPage.html:18
+msgid "Organizations and roles"
+msgstr "Organisaatiot ja roolit"
 
 #: translations/type.html:4
 msgid "owl:DatatypeProperty"
@@ -2373,6 +2397,14 @@ msgstr ""
 msgid "Self reference not allowed"
 msgstr "Viittaus itseensä ei ole sallittu"
 
+#: app/components/user/userPage.html:45
+msgid "Send"
+msgstr "Lähetä"
+
+#: app/components/user/userPage.html:35
+msgid "Send access request"
+msgstr "Lähetä käyttöoikeuspyyntö"
+
 #: translations/misc.html:263
 msgid "Session expired"
 msgstr "Istunto on vanhentunut"
@@ -2550,6 +2582,10 @@ msgstr "Tekninen metadata"
 msgid "Technical namespaces"
 msgstr "Tekniset nimiavaruudet"
 
+#: translations/misc.html:285
+msgid "TERMINOLOGY_EDITOR"
+msgstr "Sanastotyöntekijä"
+
 #: translations/help.html:137
 msgid "Testikirjasto"
 msgstr "Testikirjasto"
@@ -2629,6 +2665,10 @@ msgstr "Yksilöllinen nimi"
 msgid "Unknown namespace"
 msgstr "Tuntematon nimiavaruus"
 
+#: app/components/user/userPage.html:22
+msgid "Unknown organization"
+msgstr "Tuntematon organisaatio"
+
 #: translations/misc.html:20
 msgid "Unstable"
 msgstr "Keskeneräinen"
@@ -2706,6 +2746,10 @@ msgstr ""
 #: translations/misc.html:208
 msgid "Vocabulary name"
 msgstr "Sanaston nimi"
+
+#: app/components/user/userPage.html:26
+msgid "Waiting for approval"
+msgstr "Odottaa hyväksyntää"
 
 #: translations/misc.html:81
 msgid "What can I do content"
