YTI-1037 Fix English translation of tool info text at front page

--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2018-09-03 15:00+0300\n"
+"PO-Revision-Date: 2018-09-04 08:50+0300\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: en\n"
@@ -2669,8 +2669,11 @@ msgstr ""
 #: app\components/frontPage.html:5
 msgid "ToolInfo"
 msgstr ""
-"The Controlled Vocabularies Tool is a service for creating and managing both "
-"terminological and descriptive glossaries."
+"The Data Vocabularies Tool is a service for managing and publishing data "
+"vocabularies. It contains data component libraries, i.e. data specifications "
+"for harmonizing information used by jointly different actors. In addition, "
+"the Data Vocabularies Tool is used, when necessary, for managing API’s or "
+"the contents of various data resources."
 
 #: translations/help.html:139
 msgid "Tuote"
